# rekry2022-sample

./: README.md  package.json
python/: main.py  readme.md
rust/: Cargo.toml  readme.md
rust/src/: json_types.rs  main.rs
src/: index.ts
src/utils/: math.ts
typescript/: .gitignore  readme.md
typescript/src/: index.ts  types.ts
