[package]
name = "rekry2022-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.17.3"
dotenv = "0.15.0"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
reqwest = { version = "0.11.11", features = ["blocking"] }
open = "3.0.2"
